Remove links, remove subscriptions, fix thumbnail hover temporarily remove subscriptions due to issues with gpodder api fix thumbnail covering menu when hovered by cursor

--- a/src/components/DiscoverMosaic/DiscoverMosaic.css
+++ b/src/components/DiscoverMosaic/DiscoverMosaic.css
@@ -7,7 +7,7 @@
   margin-right: 40px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
+  padding-top: 60px;
   padding-bottom: 7%;
   /* margin-left: 16%; */
 }
