--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ body {
       display: flex;
       /* flex-direction: row; */
       justify-content: center;
+      z-index: 1;
     }
   
     .menu-option {
